TracDragDropPlugin: fix overlapped upload queue are and //Download all attachments as: .zip// message
git-svn-id: https://trac-hacks.org/svn/tracdragdropplugin/0.12@15437 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/tracdragdrop/htdocs/tracdragdrop.css
+++ b/tracdragdrop/htdocs/tracdragdrop.css
@@ -196,8 +196,9 @@ body > .tracdragdrop-dropdown {
  background-color: #247;
  color: #fff;
 }
-.tracdragdrop-message {
+.tracdragdrop-queue .tracdragdrop-message {
  margin-left: 0.5em;
+ float: none;
 }
 @media print {
  .tracdragdrop-dropdown, .tracdragdrop-queue, .tracdragdrop-dropeffect {
